--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <script>
 pannellum.viewer('panorama', {
     "type": "equirectangular",
-    // "panorama": "https://pannellum.org/images/alma.jpg",
-    "panorama": "./img/anhpanorama7.jpg",
+    "panorama": "https://pannellum.org/images/alma.jpg",
+    // "panorama": "./img/anhpanorama7.jpg",
     "autoLoad": true
 });
 </script>
