--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
 
     <div class="container-fluid">
-        <img id="logoD" src="./img/banner.png">
+        <img  src="./img/banner.png" style="width: auto;    height: 1000px;    float: center;">
     </div>
 
     <nav class="navbar navbar-expand-sm bg-light "
