--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/css.css">
+    <link rel="stylesheet" href="css/css.css">
     <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script> -->
@@ -14,7 +14,7 @@
   <body>
 
     <div class="container-fluid">
-        <img  src="./img/banner.png" style="width: auto;    height: 1000px;    float: center;">
+        <img  src="./img/banner.png" style="width: auto;height: 100px;float: center;">
     </div>
 
     <nav class="navbar navbar-expand-sm bg-light "
