--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home</title>
+    <title>Trang Chủ</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet"
@@ -14,7 +14,7 @@
   <body>
 
     <div class="container-fluid">
-        <img  src="./img/banner.png" style="width: auto;height: 100px;float: center;">
+        <img id="logoD" src="img/banner.png">
     </div>
 
     <nav class="navbar navbar-expand-sm bg-light "
