--- a/index.html
+++ b/index.html
@@ -6,17 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/css.css">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script> -->
+    <script src="js/js.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+      integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+      crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+
   </head>
   <body>
 
     <div class="container-fluid">
       <img id="logoD" src="img/banner.png">
+    </div>
+    <div class="container-fluid">
       <div
-        style="color: black; text-align: center; height : auto; margin-top: 8px; margin-left: 40px; margin-right: 5px; font-weight: 500; float: center;"
+        style="color: black; text-align: center; height : auto; font-weight: 500; float: center;font-size: 10px;"
         id="time">
         <span id="ngay"></span><span>/</span>
         <span id="thang"></span><span>/</span>
@@ -26,72 +39,139 @@
         <span id="giay">00</span><span> </span>
       </div>
     </div>
-    <br>
-    <nav class="navbar navbar-expand-sm bg-light "
-      style="box-shadow: 2px 2px 4px #dfdbdb;">
-      <ul class="navbar-nav" style="color: aqua;">
+
+    <div id="wrapper" class="bg-light container-fluid mt-2">
+      <div id="header">
+        <div id="toggle">
+          <i class="fas fa-bars"></i>
+        </div>
+        <nav>
+          <ul id="main-menu">
+            <li class="nav-item" onclick="funcplay()">
+              <a class="nav-link" href="#" id="mn">Trang Chủ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="mn">Giới Thiệu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="mn">Hoạt Động</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index_DCD1.html" id="mn">Địa Chỉ Đỏ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="mn">Liên hệ</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <!-- <nav class="navbar navbar-expand-sm bg-light" style="box-shadow: 2px 2px 4px #dfdbdb;">
+      <ul class="nav nav-pills">
         <li class="nav-item" onclick="funcplay()">
-          <a class="nav-link" href="#">Trang Chủ</a>
+          <a class="nav-link" href="#" id="mn">Trang Chủ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Hoạt Động</a>
+          <a class="nav-link" href="#" id="mn">Hoạt Động</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index_DCD1.html">Địa Chỉ Đỏ</a>
+          <a class="nav-link" href="index_DCD1.html" id="mn">Địa Chỉ Đỏ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Liên hệ</a>
+          <a class="nav-link" href="#" id="mn">Liên hệ</a>
         </li>
       </ul>
-    </nav>
-    <!-- <div class="container" style="border: solid black 1px;">
+    </nav> -->
 
-    </div> -->
-    <footer class="text-center"
-      style="width: 100%; height: 60px; background-color: #ccc; margin-top: 50px;">
-      <p>
-        Phát triển bởi
+    <div class="container-fluid mt-2">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+        <!-- Indicators -->
+        <ul class="carousel-indicators">
+          <li data-slide-to="0" class="active"></li>
+          <li data-slide-to="1"></li>
+          <li data-slide-to="2"></li>
+        </ul>
+        <div class="carousel-inner text-center bg-light">
+          <div class="carousel-item active">
+            <img src="img/dtvq6.jpg" id="ca_img">
+          </div>
+          <div class="carousel-item">
+            <img src="img/dtvq5.jpg" id="ca_img">
+          </div>
+          <div class="carousel-item">
+            <img src="img/dtvq4.jpg" id="ca_img">
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+          <span class="carousel-control-prev-icon bg-dark"></span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+          <span class="carousel-control-next-icon bg-dark"></span>
+        </a>
+      </div>
+
+    </div>
+
+    <div class="container-fluid mt-2 bg-info"
+      style="width: 100%; height: 500px;  text-align: center;">
+      <h5>Những hoạt động nỗi bật</h5>
+      <div class="card col-3"
+        style="width:auto; float: left;  margin-right: 20px; border-radius: 10px;">
+        <img class="card-img-top" src="img/dtvq4.jpg" style="padding-top: 5px; border-radius: 10px 10px 0px 0px;">
+        <div class="card-body">
+          <h5 class="card-title">Thiện nguyện</h5>
+          <h6 class="card-text">VÂN QUẬT MANG YÊU THƯƠNG - Nhận cảm mến...</h6>
+          <a href="#" class="btn btn-primary">Xem chi tiết</a>
+        </div>
+      </div>
+
+      <div class="card col-3"
+        style="width:auto; float: left; margin-right: 20px;">
+        <div class="card-body">
+          <h4 class="card-title">John Doe</h4>
+          <p class="card-text">Some example text.</p>
+          <a href="#" class="btn btn-primary">See Profile</a>
+        </div>
+        <img class="card-img-bottom" src="img/dtvq1.jpg" alt="Card image">
+      </div>
+
+      <div class="card col-3"
+        style="width:auto; float: left; margin-right: 20px;">
+        <div class="card-body">
+          <h4 class="card-title">John Doe</h4>
+          <p class="card-text">Some example text.</p>
+          <a href="#" class="btn btn-primary">See Profile</a>
+        </div>
+        <img class="card-img-bottom" src="img/dtvq1.jpg" alt="Card image">
+      </div>
+    </div>
+
+    <footer id="ft" class="bg-light">
+      <h6>
+        Trang web được phát triển bởi
         <a href="https://www.facebook.com/VietAn.Tran.1606.CE001"
-          style="color: #fff;">Trần Viết An</a>
-      </p>
+          style="color: #810505;">Trần Viết An</a>
+      </h6>
     </footer>
     <audio id="audio_p">
       <source src="./audio/GiaiDieuTuHao.mp3">
     </audio>
+    <script>
+      var audio = document.getElementById("audio_p");
+      function funcplay() {
+        audio.play();
+      }
+
+    $(document).ready(function() {
+      $('#toggle').click(function() {
+        $('nav').slideToggle();
+      });
+    })
+  
+    </script>
+
   </body>
-  <script>
-    var audio = document.getElementById('audio_p');
-    function funcplay(){
-      audio.play();
-    }
-
-    function Dong_ho() {
-			var ngay = document.getElementById("ngay");
-			var thang = document.getElementById("thang");
-			var nam = document.getElementById("nam");
-			var gio = document.getElementById("gio");
-			var phut = document.getElementById("phut");
-			var giay = document.getElementById("giay");
-			var ngay_hien_tai = new Date().getDate();
-			var thang_hien_tai = new Date().getMonth() + 1;
-			var nam_hien_tai = new Date().getFullYear();
-			var Gio_hien_tai = new Date().getHours();
-			var Phut_hien_tai = new Date().getMinutes();
-			var Giay_hien_tai = new Date().getSeconds();
-			ngay.innerHTML = ngay_hien_tai;
-			if (thang_hien_tai < 10) thang.innerHTML = "0" + thang_hien_tai;
-			else thang.innerHTML = thang_hien_tai;
-			nam.innerHTML = nam_hien_tai;
-			if (Gio_hien_tai < 10) gio.innerHTML = "0" + Gio_hien_tai;
-			else gio.innerHTML = Gio_hien_tai;
-			if (Phut_hien_tai < 10) phut.innerHTML = "0" + Phut_hien_tai;
-			else phut.innerHTML = Phut_hien_tai;
-			if (Giay_hien_tai < 10) giay.innerHTML = "0" + Giay_hien_tai;
-			else giay.innerHTML = Giay_hien_tai;
-		}
-		var Dem_gio = setInterval(Dong_ho, 1000);
-
-    var imgLg =  document.getElementById('logoD')
-    imgLg.click
-  </script>
 </html>
