--- a/index.html
+++ b/index.html
@@ -4,27 +4,34 @@
     <title>Trang Chủ</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <script
-      src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/css.css">
-    <script src="js/js.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/css_mn.css">
+    <link rel="stylesheet" href="css/css_GT.css">
+
+    <link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css"  href="bootstraps/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="bootstraps/js/bootstrap.js">
+    <!-- <link type="text/css" href="bootstraps/css/bootstrap.min.css" -->
+    <!-- rel="stylesheet"> -->
+    <link type="text/css" href="bootstrap/css/bootstrap-responsive.min.css"
+      rel="stylesheet">
+    <!-- <script type="text/javascript" src="bootstraps/js/jquery.min.js"></script> -->
+    <!-- <script type="text/javascript" src="bootstraps/js/bootstrap.min.js"></script> -->
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
       integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
       crossorigin="anonymous" />
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="js/js.js"></script>
 
   </head>
   <body>
 
-    <div class="container-fluid">
+    <div class="container-fluid" style="display: flex; width: 100%;">
       <img id="logoD" src="img/banner.png">
     </div>
     <div class="container-fluid">
@@ -39,139 +46,108 @@
         <span id="giay">00</span><span> </span>
       </div>
     </div>
+    <!-- //-------------menu------------------- -->
+    <div class="container-fluid mt-2 bg-light">
+      <div id="menu_center">
+        <div class="topnav" id="myTopnav">
 
-    <div id="wrapper" class="bg-light container-fluid mt-2">
-      <div id="header">
-        <div id="toggle">
-          <i class="fas fa-bars"></i>
+          <a href="index.html" id="mn" onclick="funcplay()">
+            <img id="icon" src="img/icon/home.png">
+            Trang Chủ
+          </a>
+          <a href id="mn">
+            <img id="icon" src="img/icon/info.png">
+            Giới Thiệu
+          </a>
+          <a href id="mn">
+            <img id="icon" src="img/icon/news.png">
+            Hoạt Động
+          </a>
+          <a href="index_DCD1.html" id="mn">
+            <img id="icon" src="img/icon/map.png">
+            Địa Chỉ Đỏ
+          </a>
+          <a href id="mn">
+            <img id="icon" src="img/icon/contact.png">
+            Liên hệ
+          </a>
+
+          <a href="javascript:void(0);" class="icon"
+            onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          </a>
         </div>
-        <nav>
-          <ul id="main-menu">
-            <li class="nav-item" onclick="funcplay()">
-              <a class="nav-link" href="#" id="mn">Trang Chủ</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" id="mn">Giới Thiệu</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" id="mn">Hoạt Động</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index_DCD1.html" id="mn">Địa Chỉ Đỏ</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" id="mn">Liên hệ</a>
-            </li>
-          </ul>
-        </nav>
       </div>
-    </div>
-    <!-- <nav class="navbar navbar-expand-sm bg-light" style="box-shadow: 2px 2px 4px #dfdbdb;">
-      <ul class="nav nav-pills">
-        <li class="nav-item" onclick="funcplay()">
-          <a class="nav-link" href="#" id="mn">Trang Chủ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" id="mn">Hoạt Động</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="index_DCD1.html" id="mn">Địa Chỉ Đỏ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" id="mn">Liên hệ</a>
-        </li>
-      </ul>
-    </nav> -->
+      <!-- //--------end-menu------------------- -->
+      <!-- ---------------carousel---------------- -->
+      <div class="container-fluid">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="" data-slide-to="0" class="active"></li>
+            <li data-target="" data-slide-to="1"></li>
+            <li data-target="" data-slide-to="2"></li>
+          </ol>
 
-    <div class="container-fluid mt-2">
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-        <!-- Indicators -->
-        <ul class="carousel-indicators">
-          <li data-slide-to="0" class="active"></li>
-          <li data-slide-to="1"></li>
-          <li data-slide-to="2"></li>
-        </ul>
-        <div class="carousel-inner text-center bg-light">
-          <div class="carousel-item active">
-            <img src="img/dtvq6.jpg" id="ca_img">
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" id="carousel_img">
+            <div class="item active">
+              <img src="img/dtvq6.jpg" alt="Los Angeles" style="width:100%;">
+            </div>
+            <div class="item">
+              <img src="img/dtvq5.jpg" alt="Chicago" style="width:100%;">
+            </div>
+            <div class="item">
+              <img src="img/dtvq4.jpg" alt="New york" style="width:100%;">
+            </div>
           </div>
-          <div class="carousel-item">
-            <img src="img/dtvq5.jpg" id="ca_img">
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+      <div class="container-fluid mt-2">
+        <div class="row">
+          <div class="col-md-3" style="background-color: gray;">
+            aa
           </div>
-          <div class="carousel-item">
-            <img src="img/dtvq4.jpg" id="ca_img">
+          <div class="col-md-9" style="background-color: gray;">
+            aa ê
           </div>
         </div>
-
-        <!-- Left and right controls -->
-        <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
-          <span class="carousel-control-prev-icon bg-dark"></span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" data-slide="next">
-          <span class="carousel-control-next-icon bg-dark"></span>
-        </a>
       </div>
 
-    </div>
+      <footer id="ft" class="bg-light mt-2">
+        <h6>
+          Trang web được phát triển bởi
+          <a href="https://www.facebook.com/VietAn.Tran.1606.CE001"
+            style="color: #810505;">Trần Viết An</a>
+        </h6>
+        <h6>Trang web đang được triển khai trên nên tảng Github cá nhân</h6>
+      </footer>
 
-    <div class="container-fluid mt-2 bg-info"
-      style="width: 100%; height: 500px;  text-align: center;">
-      <h5>Những hoạt động nỗi bật</h5>
-      <div class="card col-3"
-        style="width:auto; float: left;  margin-right: 20px; border-radius: 10px;">
-        <img class="card-img-top" src="img/dtvq4.jpg" style="padding-top: 5px; border-radius: 10px 10px 0px 0px;">
-        <div class="card-body">
-          <h5 class="card-title">Thiện nguyện</h5>
-          <h6 class="card-text">VÂN QUẬT MANG YÊU THƯƠNG - Nhận cảm mến...</h6>
-          <a href="#" class="btn btn-primary">Xem chi tiết</a>
-        </div>
-      </div>
-
-      <div class="card col-3"
-        style="width:auto; float: left; margin-right: 20px;">
-        <div class="card-body">
-          <h4 class="card-title">John Doe</h4>
-          <p class="card-text">Some example text.</p>
-          <a href="#" class="btn btn-primary">See Profile</a>
-        </div>
-        <img class="card-img-bottom" src="img/dtvq1.jpg" alt="Card image">
-      </div>
-
-      <div class="card col-3"
-        style="width:auto; float: left; margin-right: 20px;">
-        <div class="card-body">
-          <h4 class="card-title">John Doe</h4>
-          <p class="card-text">Some example text.</p>
-          <a href="#" class="btn btn-primary">See Profile</a>
-        </div>
-        <img class="card-img-bottom" src="img/dtvq1.jpg" alt="Card image">
-      </div>
-    </div>
-
-    <footer id="ft" class="bg-light">
-      <h6>
-        Trang web được phát triển bởi
-        <a href="https://www.facebook.com/VietAn.Tran.1606.CE001"
-          style="color: #810505;">Trần Viết An</a>
-      </h6>
-    </footer>
-    <audio id="audio_p">
-      <source src="./audio/GiaiDieuTuHao.mp3">
-    </audio>
+      <audio id="audio_p">
+        <source src="./audio/GiaiDieuTuHao.mp3">
+      </audio>
+    </body>
     <script>
-      var audio = document.getElementById("audio_p");
-      function funcplay() {
-        audio.play();
-      }
-
-    $(document).ready(function() {
-      $('#toggle').click(function() {
-        $('nav').slideToggle();
-      });
-    })
-  
-    </script>
-
-  </body>
-</html>
+        var audio = document.getElementById("audio_p");
+        function funcplay() {
+          audio.play();
+        }
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
+    
+      </script>
+  </html>
