--- a/index_GT.html
+++ b/index_GT.html
@@ -53,23 +53,23 @@
                 <div class="topnav" id="myTopnav">
 
                     <a href="index.html" id="mn" onclick="funcplay()">
-                        <img id="icon" src="img/icon/home.png">
+                        <img id="icon_mn" src="img/icon/home.png">
                         Trang Chủ
                     </a>
                     <a href id="mn">
-                        <img id="icon" src="img/icon/info.png">
+                        <img id="icon_mn" src="img/icon/info.png">
                         Giới Thiệu
                     </a>
                     <a href id="mn">
-                        <img id="icon" src="img/icon/news.png">
+                        <img id="icon_mn" src="img/icon/news.png">
                         Hoạt Động
                     </a>
                     <a href="index_DCD1.html" id="mn">
-                        <img id="icon" src="img/icon/map.png">
+                        <img id="icon_mn" src="img/icon/map.png">
                         Địa Chỉ Đỏ
                     </a>
                     <a href id="mn">
-                        <img id="icon" src="img/icon/contact.png">
+                        <img id="icon_mn" src="img/icon/contact.png">
                         Liên hệ
                     </a>
 
@@ -83,11 +83,14 @@
             <!-- ---------------carousel---------------- -->
             <!-- ----------------------end carousel-------- -->
             <!-- ---------------conten info------------- -->
-            <div class="container-fluid mt-2 bg-light" >
+            <div class="container-fluid mt-2 bg-light">
                 <div class="row">
                     <div class="col-xs-3" id="tab1">
-                        <div style="width: auto; height: auto; background-color: #0099FF; text-align: center; border-radius: 3px;">
-                            <p style="font-size: 20px; color: white; font-weight: 550; padding: 5px;">Tin Tức Nỗi Bật</p>
+                        <div
+                            style="width: auto; height: auto; background-color: #0099FF; text-align: center; border-radius: 3px;">
+                            <p
+                                style="font-size: 20px; color: white; font-weight: 550; padding: 5px;">Tin
+                                Tức Nỗi Bật</p>
                         </div>
                         <!-- <br> -->
                         <div>
