--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="vi">
   <head>
-    <title>Trang Chủ</title>
+    <title>Vân Quật - Trang Chủ</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/css.css">
-    <link rel="stylesheet" href="css/css_mn.css">
     <link rel="stylesheet" href="css/css_GT.css">
 
     <link rel="stylesheet"
@@ -16,12 +15,8 @@
       src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css"  href="bootstraps/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="bootstraps/js/bootstrap.js">
-    <!-- <link type="text/css" href="bootstraps/css/bootstrap.min.css" -->
-    <!-- rel="stylesheet"> -->
     <link type="text/css" href="bootstrap/css/bootstrap-responsive.min.css"
       rel="stylesheet">
-    <!-- <script type="text/javascript" src="bootstraps/js/jquery.min.js"></script> -->
-    <!-- <script type="text/javascript" src="bootstraps/js/bootstrap.min.js"></script> -->
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
       integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
@@ -52,23 +47,23 @@
         <div class="topnav" id="myTopnav">
 
           <a href="index.html" id="mn" onclick="funcplay()">
-            <img id="icon" src="img/icon/home.png">
+            <img id="icon_mn" src="img/icon/home.png">
             Trang Chủ
           </a>
-          <a href id="mn">
-            <img id="icon" src="img/icon/info.png">
+          <a href="index_GT.html" id="mn">
+            <img id="icon_mn" src="img/icon/info.png">
             Giới Thiệu
           </a>
           <a href id="mn">
-            <img id="icon" src="img/icon/news.png">
+            <img id="icon_mn" src="img/icon/news.png">
             Hoạt Động
           </a>
           <a href="index_DCD1.html" id="mn">
-            <img id="icon" src="img/icon/map.png">
+            <img id="icon_mn" src="img/icon/map.png">
             Địa Chỉ Đỏ
           </a>
           <a href id="mn">
-            <img id="icon" src="img/icon/contact.png">
+            <img id="icon_mn" src="img/icon/contact.png">
             Liên hệ
           </a>
 
