--- a/index_GT.html
+++ b/index_GT.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="vi">
     <head>
-        <title>Trang Chủ</title>
+        <title>Vân Quật - Giới Thiệu</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/css.css">
-        <link rel="stylesheet" href="css/css_mn.css">
         <link rel="stylesheet" href="css/css_GT.css">
 
         <link rel="stylesheet"
@@ -17,12 +16,8 @@
         <link rel="stylesheet" type="text/css"
             href="bootstraps/css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="bootstraps/js/bootstrap.js">
-        <!-- <link type="text/css" href="bootstraps/css/bootstrap.min.css" -->
-        <!-- rel="stylesheet"> -->
         <link type="text/css" href="bootstrap/css/bootstrap-responsive.min.css"
             rel="stylesheet">
-        <!-- <script type="text/javascript" src="bootstraps/js/jquery.min.js"></script> -->
-        <!-- <script type="text/javascript" src="bootstraps/js/bootstrap.min.js"></script> -->
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
             integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
@@ -87,60 +82,57 @@
                 <div class="row">
                     <div class="col-xs-3" id="tab1">
                         <div
-                            style="width: auto; height: auto; background-color: #0099FF; text-align: center; border-radius: 3px;">
+                            style="width: auto; height: auto; background-color: #0099FF; text-align: center; border-radius: 3px; box-shadow: 2px 2px 4px #7cc5f0;">
                             <p
-                                style="font-size: 20px; color: white; font-weight: 550; padding: 5px;">Tin
-                                Tức Nỗi Bật</p>
+                                style="font-size: 20px; color: white; font-weight: 550; padding: 5px;">
+                                Tin Tức Nỗi Bật</p>
                         </div>
                         <!-- <br> -->
                         <div>
-                            <marquee direction="up">
+                            <marquee direction="up"
+                                style=" box-shadow: 2px 2px 4px #dfdbdb;">
                                 <ul
                                     style="background-color:#EEEEEE; padding: 0px 0px 0px 0px;">
                                     <li>
                                         <div style="background-color:#0099FF"
                                             class="text-center">
-                                            <h5>17/08/2021 - 19:51:04</h5>
+                                            <h5>01/08/2023 - 6:51:04</h5>
                                         </div>
                                         <a href="index.html">>>[THÔNG BÁO] Thông
-                                            báo về việc tạm ngừng một số hoạt
-                                            đông...</a>
+                                            tin triệu tập Đoàn viên...</a>
                                     </li>
                                     <li>
                                         <div style="background-color:#0099FF"
                                             class="text-center">
-                                            <h5>17/08/2021 - 08:32:04</h5>
+                                            <h5>18/07/2023 - 08:32:04</h5>
                                         </div>
-                                        <a href="index.html">>>[THÔNG BÁO] Thông
-                                            báo về việc đăng kí người từ Đà Nẵng
-                                            về...</a>
+                                        <a href="index.html">>>[HOẠT ĐỘNG] Thiện
+                                            Nguyện - Bữa ăn yêu thương...</a>
                                     </li>
                                     <li>
                                         <div style="background-color: #0099FF;"
                                             class="text-center">
-                                            <h5>17/08/2021 - 07:00:00</h5>
+                                            <h5>23/07/2023 - 17:40:00</h5>
                                         </div>
-                                        <a href="index.html">>>[TIN TỨC] Tổng số
-                                            ca mắt bệnh được công bố trong
-                                            ngày...</a>
+                                        <a href="index.html">>>[HOẠT ĐỘNG] Hưởng
+                                            ứng ngày chủ nhật Xanh...</a>
                                     </li>
                                     <li>
                                         <div style="background-color: #0099FF;"
                                             class="text-center">
-                                            <h5>15/08/2021 - 10:37:47</h5>
+                                            <h5>20/07/2023 - 10:37:47</h5>
                                         </div>
-                                        <a href="index.html">>>[SỰ KIỆN] Tổ chức
-                                            sinh hoạt liên chi Đoàn, chuẩn bị
-                                            công... </a>
+                                        <a href="index.html">>>[THÔNG BÁO] Để
+                                            chuẩn bị lực lượng tham gia hội
+                                            trại... </a>
                                     </li>
                                     <li>
                                         <div style="background-color:#0099FF"
                                             class="text-center">
-                                            <h4>10/08/2021 - 13:07:04</h4>
+                                            <h4>15/07/2021 - 13:07:04</h4>
                                         </div>
-                                        <a href="index.html">>>[THÔNG BÁO] Thông
-                                            báo về việc cho phép hoạt đông trở
-                                            lại...</a>
+                                        <a href="index.html">>>[THÔNG BÁO] Triển
+                                            khai hoạt động hè tại nơi cư trú...</a>
                                     </li>
                                     <li>
                                         <div style="background-color:#0099FF"
@@ -154,13 +146,31 @@
                             </marquee>
                         </div>
                     </div>
-                    <div class="col-xs-8" style="background-color:pink;"
+                    <div class="col-xs-9" style="background-color:pink;"
                         id="tab2">
-                        ffffffffffffffffffffffffffff
+                        <h3 style="text-align: center;">Thông tin giới thiệu</h3>
+                        <p style="text-align: justify; font-size: 13px;">“Việt
+                            Nam có hơn 6 triệu Đoàn viên thanh niên, đây là
+                            lực lượng xung kích, nhiệt huyết có khả năng sáng
+                            tạo, nắm bắt công nghệ nhanh, tức là có lợi thế
+                            trong việc thích nghi với môi trường số. Nếu mỗi
+                            Đoàn viên trở thành một hạt nhân để lan tỏa kỹ năng
+                            số đến tới từng gia đình thì việc phổ cập kỹ năng số
+                            cho người dân sẽ trở thành nhiệm vụ khả thi hơn
+                            nhiều”, Thứ trưởng Nguyễn Huy Dũng nói.</p>
+                        <!-- <br> -->
+                        <p style="text-align: justify; font-size: 13px;">Cùng
+                            với tiến trình chuyển đổi số quốc gia. Ban Chấp
+                            Hành Đoàn TNCS Hồ Chí Minh thôn Vân Quật giới thiệu
+                            việc
+                            triển khai xây dựng hệ thống
+                            "Ứng dụng chuyển đổi số - số hóa thông tin" tại địa
+                            chỉ <a href="https://tuoitrevanquat.github.io">https://tuoitrevanquat.github.io</a></p>
+                        <p>Thông qua trang thông tin điện tự này, kết hợp cùng với các trang tin <a href="https://www.facebook.com/profile.php?id=100082551411057">Facebook</a> sẽ đưa thông tin đến với ....</p>
                     </div>
                 </div>
             </div>
-
+            F
             <div class="container-fluid mt2" id="tab3">
                 <div class="row">
                     <div class="col-xs-12" style="background-color:red;">
