--- a/index_GT.html
+++ b/index_GT.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
     <head>
         <title>Vân Quật - Giới Thiệu</title>
         <meta charset="utf-8">
@@ -74,129 +74,178 @@
                     </a>
                 </div>
             </div>
-            <!-- //--------end-menu------------------- -->
-            <!-- ---------------carousel---------------- -->
-            <!-- ----------------------end carousel-------- -->
-            <!-- ---------------conten info------------- -->
-            <div class="container-fluid mt-2 bg-light">
-                <div class="row">
-                    <div class="col-xs-3" id="tab1">
-                        <div
-                            style="width: auto; height: auto; background-color: #0099FF; text-align: center; border-radius: 3px; box-shadow: 2px 2px 4px #7cc5f0;">
-                            <p
-                                style="font-size: 20px; color: white; font-weight: 550; padding: 5px;">
-                                Tin Tức Nỗi Bật</p>
-                        </div>
-                        <!-- <br> -->
-                        <div>
-                            <marquee direction="up"
-                                style=" box-shadow: 2px 2px 4px #dfdbdb;">
-                                <ul
-                                    style="background-color:#EEEEEE; padding: 0px 0px 0px 0px;">
-                                    <li>
-                                        <div style="background-color:#0099FF"
-                                            class="text-center">
-                                            <h5>01/08/2023 - 6:51:04</h5>
-                                        </div>
-                                        <a href="index.html">>>[THÔNG BÁO] Thông
-                                            tin triệu tập Đoàn viên...</a>
-                                    </li>
-                                    <li>
-                                        <div style="background-color:#0099FF"
-                                            class="text-center">
-                                            <h5>18/07/2023 - 08:32:04</h5>
-                                        </div>
-                                        <a href="index.html">>>[HOẠT ĐỘNG] Thiện
-                                            Nguyện - Bữa ăn yêu thương...</a>
-                                    </li>
-                                    <li>
-                                        <div style="background-color: #0099FF;"
-                                            class="text-center">
-                                            <h5>23/07/2023 - 17:40:00</h5>
-                                        </div>
-                                        <a href="index.html">>>[HOẠT ĐỘNG] Hưởng
-                                            ứng ngày chủ nhật Xanh...</a>
-                                    </li>
-                                    <li>
-                                        <div style="background-color: #0099FF;"
-                                            class="text-center">
-                                            <h5>20/07/2023 - 10:37:47</h5>
-                                        </div>
-                                        <a href="index.html">>>[THÔNG BÁO] Để
-                                            chuẩn bị lực lượng tham gia hội
-                                            trại... </a>
-                                    </li>
-                                    <li>
-                                        <div style="background-color:#0099FF"
-                                            class="text-center">
-                                            <h4>15/07/2021 - 13:07:04</h4>
-                                        </div>
-                                        <a href="index.html">>>[THÔNG BÁO] Triển
-                                            khai hoạt động hè tại nơi cư trú...</a>
-                                    </li>
-                                    <li>
-                                        <div style="background-color:#0099FF"
-                                            class="text-right"><a
-                                                href="index.html"
-                                                style="color: white;margin-right: 5px">>>xem
-                                                thêm</a></div>
+        </div>
 
-                                    </li>
-                                </ul>
-                            </marquee>
-                        </div>
+        <!-- //--------end-menu------------------- -->
+        <!-- ---------------carousel---------------- -->
+        <!-- ----------------------end carousel-------- -->
+        <!-- ---------------conten info------------- -->
+        <div class="container-fluid mt-2 bg-light">
+            <div class="row">
+                <div class="col-xs-3" id="tab1">
+                    <div
+                        style="width: auto; height: auto; background-color: #0099FF; text-align: center; border-radius: 3px; box-shadow: 2px 2px 4px #7cc5f0;">
+                        <p
+                            style="font-size: 16px; color: white; font-weight: 550; padding: 5px;">
+                            Tin Tức Nỗi Bật</p>
                     </div>
-                    <div class="col-xs-9" style="background-color:pink;"
-                        id="tab2">
-                        <h3 style="text-align: center;">Thông tin giới thiệu</h3>
-                        <p style="text-align: justify; font-size: 13px;">“Việt
-                            Nam có hơn 6 triệu Đoàn viên thanh niên, đây là
-                            lực lượng xung kích, nhiệt huyết có khả năng sáng
-                            tạo, nắm bắt công nghệ nhanh, tức là có lợi thế
-                            trong việc thích nghi với môi trường số. Nếu mỗi
-                            Đoàn viên trở thành một hạt nhân để lan tỏa kỹ năng
-                            số đến tới từng gia đình thì việc phổ cập kỹ năng số
-                            cho người dân sẽ trở thành nhiệm vụ khả thi hơn
-                            nhiều”, Thứ trưởng Nguyễn Huy Dũng nói.</p>
-                        <!-- <br> -->
-                        <p style="text-align: justify; font-size: 13px;">Cùng
-                            với tiến trình chuyển đổi số quốc gia. Ban Chấp
-                            Hành Đoàn TNCS Hồ Chí Minh thôn Vân Quật giới thiệu
-                            việc
-                            triển khai xây dựng hệ thống
-                            "Ứng dụng chuyển đổi số - số hóa thông tin" tại địa
-                            chỉ <a href="https://tuoitrevanquat.github.io">https://tuoitrevanquat.github.io</a></p>
-                        <p>Thông qua trang thông tin điện tự này, kết hợp cùng với các trang tin <a href="https://www.facebook.com/profile.php?id=100082551411057">Facebook</a> sẽ đưa thông tin đến với ....</p>
+                    <!-- <br> -->
+                    <div>
+                        <marquee direction="up"
+                            style=" box-shadow: 2px 2px 4px #dfdbdb;">
+                            <ul
+                                style="background-color:#EEEEEE; padding: 0px 0px 0px 0px;">
+                                <li>
+                                    <div style="background-color:#0099FF"
+                                        class="text-center">
+                                        <h5>01/08/2023 - 6:51:04</h5>
+                                    </div>
+                                    <a href="index.html">>>[THÔNG BÁO] Thông
+                                        tin triệu tập Đoàn viên...</a>
+                                </li>
+                                <li>
+                                    <div style="background-color:#0099FF"
+                                        class="text-center">
+                                        <h5>18/07/2023 - 08:32:04</h5>
+                                    </div>
+                                    <a href="index.html">>>[HOẠT ĐỘNG] Thiện
+                                        Nguyện - Bữa ăn yêu thương...</a>
+                                </li>
+                                <li>
+                                    <div style="background-color: #0099FF;"
+                                        class="text-center">
+                                        <h5>23/07/2023 - 17:40:00</h5>
+                                    </div>
+                                    <a href="index.html">>>[HOẠT ĐỘNG] Hưởng
+                                        ứng ngày chủ nhật Xanh...</a>
+                                </li>
+                                <li>
+                                    <div style="background-color: #0099FF;"
+                                        class="text-center">
+                                        <h5>20/07/2023 - 10:37:47</h5>
+                                    </div>
+                                    <a href="index.html">>>[THÔNG BÁO] Để
+                                        chuẩn bị lực lượng tham gia hội
+                                        trại... </a>
+                                </li>
+                                <li>
+                                    <div style="background-color:#0099FF"
+                                        class="text-center">
+                                        <h4>15/07/2021 - 13:07:04</h4>
+                                    </div>
+                                    <a href="index.html">>>[THÔNG BÁO] Triển
+                                        khai hoạt động hè tại nơi cư trú...</a>
+                                </li>
+                                <li>
+                                    <div style="background-color:#0099FF"
+                                        class="text-right"><a
+                                            href="index.html"
+                                            style="color: white;margin-right: 5px">>>xem
+                                            thêm</a></div>
+
+                                </li>
+                            </ul>
+                        </marquee>
                     </div>
+                </div>
+                <div class="col-xs-9" id="tab2">
+                    <h3 style="text-align: center;">Thông tin giới thiệu</h3>
+                    <p style="text-align: justify; font-size: 13px;">“Việt
+                        Nam có hơn 6 triệu Đoàn viên thanh niên, đây là
+                        lực lượng xung kích, nhiệt huyết có khả năng sáng
+                        tạo, nắm bắt công nghệ nhanh, tức là có lợi thế
+                        trong việc thích nghi với môi trường số. Nếu mỗi
+                        Đoàn viên trở thành một hạt nhân để lan tỏa kỹ năng
+                        số đến tới từng gia đình thì việc phổ cập kỹ năng số
+                        cho người dân sẽ trở thành nhiệm vụ khả thi hơn
+                        nhiều”, Thứ trưởng Nguyễn Huy Dũng nói.</p>
+                    <!-- <br> -->
+                    <p style="text-align: justify; font-size: 13px;">Cùng
+                        với tiến trình chuyển đổi số quốc gia. Ban Chấp
+                        Hành Đoàn TNCS Hồ Chí Minh thôn Vân Quật giới thiệu
+                        việc triển khai xây dựng hệ thống
+                        "Ứng dụng chuyển đổi số - số hóa thông tin" tại địa
+                        chỉ <a href="https://tuoitrevanquat.github.io">https://tuoitrevanquat.github.io</a></p>
+                    <p style="text-align: justify; font-size: 13px;">Thông qua
+                        trang thông tin điện tự này, kết hợp cùng
+                        với các trang tin <a
+                            href="https://www.facebook.com/profile.php?id=100082551411057">Facebook</a>
+                        sẽ thể kịp thời thông báo mang thông tin đến với
+                        Đoàn viên thanh niên trong thôn hơn, giúp Đoàn nắm
+                        bắt nhanh tình hình hoạt động cũng như các chỉ đạo
+                        của cấp trên.</p>
+                    <p style="text-align: justify; font-size: 13px;">Hệ thống
+                        bao gồm các nội dung được đăng tải như thông báo
+                        đến Đoàn viên, các hoạt động mà chi đoàn thực hiện theo
+                        thời gian cũng như số hóa địa chỉ đỏ tại địa phương qua
+                        góc nhìn 3D tại địa điểm đó và định vị trên Google Map.
+                    </p>
+
                 </div>
             </div>
-            F
-            <div class="container-fluid mt2" id="tab3">
-                <div class="row">
-                    <div class="col-xs-12" style="background-color:red;">
-                        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+        </div>
+        <div class="container-fluid mt-2" id="tab3">
+            <div class="row">
+                <div class="col-xs-12" style="background-color:red;">
+                    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 
-                    </div>
                 </div>
+            </div>
+        </div>
 
-                <!-- -------------end conten info--------------- -->
+        <!-- -------------end conten info--------------- -->
+        <div class="container-fluid bg-light mt-2"
+            style="box-shadow: 2px 2px 4px #dfdbdb;  background-image: url('img/ft1.jpg');   filter: blur(1px);
+            -webkit-filter: blur(0px); height: 200px;">
+            <div class="row">
+                <div class="col-xs-6 ">
+                    <p id="ft_h">
+                        THÔNG TIN LIÊN HỆ
+                    </p>
+                    <ul id="ul_ft">
+                        <li><img src="img/icon/home.png" style="width: 15px; ">
+                            Đoàn TNCH Hồ Chí Minh Thôn Vân Quật
+                        </li>
+                        <li> <img src="img/icon/map.png" style="width: 15px;">
+                            Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh
+                            Quảng Nam
+                        </li>
+                        <li> <img src="img/icon/contact.png"
+                                style="width: 15px;"> doanthonvanquat@gmail.com
+                        </li>
+                    </ul>
+                    <!-- <a style="color: #0099FF; float: left;">Đoàn TNCH Hồ Chí Minh Thôn Vân Quật</a>
+                    <a style="color: #0099FF; float: left;">Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh QUảng Nam</a><br>
+                    <a style="color: #0099FF; float: left;">doanthonvanquat@gmail.com</a> -->
 
-                <footer id="ft" class="bg-light mt-2">
-                    <h6>
-                        Trang web được phát triển bởi
-                        <a
-                            href="https://www.facebook.com/VietAn.Tran.1606.CE001"
-                            style="color: #810505;">Trần Viết An</a>
-                    </h6>
-                    <h6>Trang web đang được triển khai trên nên tảng Github cá
-                        nhân</h6>
-                </footer>
+                </div>
+                <div class="col-xs-6 ">
+                    <p id="ft_h">
+                        THEO DÕI CHÚNG TÔI
+                    </p>
+                    <ul id="ul_ft">
+                        <li><img src="img/icon/fb.jpg" style="width: 40px; border-radius: 15px; ">
+                           <a href="https://www.facebook.com/profile.php?id=100082551411057" style="color: #810505;">Tuổi Trẻ Vân Quật Duy Thành</a> </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <footer id="ft" class="bg-light mt-2">
+            <h6>
+                Trang web được phát triển bởi
+                <a
+                    href="https://www.facebook.com/VietAn.Tran.1606.CE001"
+                    style="color: #810505;">Trần Viết An</a>
+            </h6>
+            <h6>Trang web đang được triển khai trên nên tảng Github cá
+                nhân</h6>
+        </footer>
 
-                <audio id="audio_p">
-                    <source src="./audio/GiaiDieuTuHao.mp3">
-                </audio>
-            </body>
-            <script>
+        <audio id="audio_p">
+            <source src="./audio/GiaiDieuTuHao.mp3">
+        </audio>
+    </body>
+    <script>
         var audio = document.getElementById("audio_p");
         function funcplay() {
           audio.play();
@@ -211,4 +260,4 @@
         }
     
       </script>
-        </html>
+</html>
