--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script
       src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css"  href="bootstraps/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="bootstraps/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="bootstraps/js/bootstrap.js">
     <link type="text/css" href="bootstrap/css/bootstrap-responsive.min.css"
       rel="stylesheet">
@@ -73,64 +73,102 @@
           </a>
         </div>
       </div>
-      <!-- //--------end-menu------------------- -->
-      <!-- ---------------carousel---------------- -->
-      <div class="container-fluid">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
-          <ol class="carousel-indicators">
-            <li data-target="" data-slide-to="0" class="active"></li>
-            <li data-target="" data-slide-to="1"></li>
-            <li data-target="" data-slide-to="2"></li>
-          </ol>
+    </div>
+    <!-- //--------end-menu------------------- -->
+    <!-- ---------------carousel---------------- -->
+    <div class="container-fluid">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target data-slide-to="0" class="active"></li>
+          <li data-target data-slide-to="1"></li>
+          <li data-target data-slide-to="2"></li>
+        </ol>
 
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner" id="carousel_img">
-            <div class="item active">
-              <img src="img/dtvq6.jpg" alt="Los Angeles" style="width:100%;">
-            </div>
-            <div class="item">
-              <img src="img/dtvq5.jpg" alt="Chicago" style="width:100%;">
-            </div>
-            <div class="item">
-              <img src="img/dtvq4.jpg" alt="New york" style="width:100%;">
-            </div>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" id="carousel_img">
+          <div class="item active">
+            <img src="img/dtvq6.jpg" alt="Los Angeles" style="width:100%;">
           </div>
-          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
-      <div class="container-fluid mt-2">
-        <div class="row">
-          <div class="col-md-3" style="background-color: gray;">
-            aa
+          <div class="item">
+            <img src="img/dtvq5.jpg" alt="Chicago" style="width:100%;">
           </div>
-          <div class="col-md-9" style="background-color: gray;">
-            aa ê
+          <div class="item">
+            <img src="img/dtvq4.jpg" alt="New york" style="width:100%;">
           </div>
         </div>
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
+    </div>
+    <div class="container-fluid mt-2">
+      <div class="row">
+        <div class="col-md-3" style="background-color: gray;">
+          aa
+        </div>
+        <div class="col-md-9" style="background-color: gray;">
+          aa ê
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid bg-light mt-2"
+      style="box-shadow: 2px 2px 4px #dfdbdb;  background-image: url('img/ft1.jpg');   filter: blur(1px);
+    -webkit-filter: blur(0px); height: 200px;">
+      <div class="row">
+        <div class="col-xs-6 ">
+          <p id="ft_h">
+            THÔNG TIN LIÊN HỆ
+          </p>
+          <ul id="ul_ft">
+            <li><img src="img/icon/home.png" style="width: 15px; ">
+              Đoàn TNCH Hồ Chí Minh Thôn Vân Quật
+            </li>
+            <li> <img src="img/icon/map.png" style="width: 15px;">
+              Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh
+              Quảng Nam
+            </li>
+            <li> <img src="img/icon/contact.png"
+                style="width: 15px;"> doanthonvanquat@gmail.com
+            </li>
+          </ul>
+          <!-- <a style="color: #0099FF; float: left;">Đoàn TNCH Hồ Chí Minh Thôn Vân Quật</a>
+            <a style="color: #0099FF; float: left;">Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh QUảng Nam</a><br>
+            <a style="color: #0099FF; float: left;">doanthonvanquat@gmail.com</a> -->
 
-      <footer id="ft" class="bg-light mt-2">
-        <h6>
-          Trang web được phát triển bởi
-          <a href="https://www.facebook.com/VietAn.Tran.1606.CE001"
-            style="color: #810505;">Trần Viết An</a>
-        </h6>
-        <h6>Trang web đang được triển khai trên nên tảng Github cá nhân</h6>
-      </footer>
+        </div>
+        <div class="col-xs-6 ">
+          <p id="ft_h">
+            THEO DÕI CHÚNG TÔI
+          </p>
+          <ul id="ul_ft">
+            <li><img src="img/icon/fb.jpg"
+                style="width: 40px; border-radius: 15px; ">
+              <a href="https://www.facebook.com/profile.php?id=100082551411057"
+                style="color: #810505;">Tuổi Trẻ Vân Quật Duy Thành</a> </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <footer id="ft" class="bg-light mt-2">
+      <h6>
+        Trang web được phát triển bởi
+        <a href="https://www.facebook.com/VietAn.Tran.1606.CE001"
+          style="color: #810505;">Trần Viết An</a>
+      </h6>
+      <h6>Trang web đang được triển khai trên nên tảng Github cá nhân</h6>
+    </footer>
 
-      <audio id="audio_p">
-        <source src="./audio/GiaiDieuTuHao.mp3">
-      </audio>
-    </body>
-    <script>
+    <audio id="audio_p">
+      <source src="./audio/GiaiDieuTuHao.mp3">
+    </audio>
+  </body>
+  <script>
         var audio = document.getElementById("audio_p");
         function funcplay() {
           audio.play();
@@ -145,4 +183,4 @@
         }
     
       </script>
-  </html>
+</html>
