--- a/index_GT.html
+++ b/index_GT.html
@@ -51,7 +51,7 @@
                         <img id="icon_mn" src="img/icon/home.png">
                         Trang Chủ
                     </a>
-                    <a href id="mn">
+                    <a id="mn">
                         <img id="icon_mn" src="img/icon/info.png">
                         Giới Thiệu
                     </a>
@@ -141,8 +141,8 @@
                                         class="text-right"><a
                                             href="index.html"
                                             style="color: white;margin-right: 5px">>>xem
-                                            thêm</a></div>
-
+                                            thêm</a>
+                                    </div>
                                 </li>
                             </ul>
                         </marquee>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="col-xs-9" id="tab2">
                     <h3 style="text-align: center;">Thông tin giới thiệu</h3>
-                    <p style="text-align: justify; font-size: 13px;">“Việt
+                    <p id="p_intro">“Việt
                         Nam có hơn 6 triệu Đoàn viên thanh niên, đây là
                         lực lượng xung kích, nhiệt huyết có khả năng sáng
                         tạo, nắm bắt công nghệ nhanh, tức là có lợi thế
@@ -160,13 +160,13 @@
                         cho người dân sẽ trở thành nhiệm vụ khả thi hơn
                         nhiều”, Thứ trưởng Nguyễn Huy Dũng nói.</p>
                     <!-- <br> -->
-                    <p style="text-align: justify; font-size: 13px;">Cùng
+                    <p id="p_intro">Cùng
                         với tiến trình chuyển đổi số quốc gia. Ban Chấp
                         Hành Đoàn TNCS Hồ Chí Minh thôn Vân Quật giới thiệu
                         việc triển khai xây dựng hệ thống
                         "Ứng dụng chuyển đổi số - số hóa thông tin" tại địa
                         chỉ <a href="https://tuoitrevanquat.github.io">https://tuoitrevanquat.github.io</a></p>
-                    <p style="text-align: justify; font-size: 13px;">Thông qua
+                    <p id="p_intro">Thông qua
                         trang thông tin điện tự này, kết hợp cùng
                         với các trang tin <a
                             href="https://www.facebook.com/profile.php?id=100082551411057">Facebook</a>
@@ -174,11 +174,11 @@
                         Đoàn viên thanh niên trong thôn hơn, giúp Đoàn nắm
                         bắt nhanh tình hình hoạt động cũng như các chỉ đạo
                         của cấp trên.</p>
-                    <p style="text-align: justify; font-size: 13px;">Hệ thống
-                        bao gồm các nội dung được đăng tải như thông báo
-                        đến Đoàn viên, các hoạt động mà chi đoàn thực hiện theo
-                        thời gian cũng như số hóa địa chỉ đỏ tại địa phương qua
-                        góc nhìn 3D tại địa điểm đó và định vị trên Google Map.
+                    <p id="p_intro">Hệ thống bao gồm các nội dung được đăng tải
+                        như thông báo đến Đoàn viên, các hoạt động mà chi đoàn
+                        thực hiện theo thời gian cũng như số hóa địa chỉ đỏ tại
+                        địa phương qua góc nhìn 3D tại địa điểm đó và định vị
+                        trên Google Map.
                     </p>
 
                 </div>
