--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img id="icon_mn" src="img/icon/news.png">
             Hoạt Động
           </a>
-          <a href="index_DCD1.html" id="mn">
+          <a href="index_dcd_CTVQ.html" id="mn">
             <img id="icon_mn" src="img/icon/map.png">
             Địa Chỉ Đỏ
           </a>
@@ -75,7 +75,7 @@
     </div>
     <!-- //--------end-menu------------------- -->
     <!-- ---------------carousel---------------- -->
-    <div class="container-fluid">
+    <div class="container-fluid mt-2">
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
