--- a/index_DCD1.html
+++ b/index_DCD1.html
@@ -44,34 +44,34 @@
         body{
             height: auto;
         }
-    #panorama {
-        /* width: 600px;
-        height: 400px; */
-        width: 800px;
-        height: 200px;
-    }
     #panorama1 {
         /* width: 600px;
         height: 400px; */
-        width: 800px;
+        width: 80%;
+        height: 200px;
+    }
+    #panorama2 {
+        /* width: 600px;
+        height: 400px; */
+        width: 60%;
         height: 200px;
     }
     </style>
     </head>
     <body>
 
-        <div id="panorama" style="float: left;"></div>
-        <div id="panorama1"></div>
+        <div id="panorama1" style="float: left;"></div>
+        <div id="panorama2"></div>
         <!-- <div id="panorama2"></div> -->
         <!-- <div id="panorama3"></div> -->
         <script>
-        pannellum.viewer('panorama', {
+        pannellum.viewer('panorama1', {
             "type": "equirectangular",
             "panorama": "https://scontent.xx.fbcdn.net/v/t1.15752-9/358238597_106868572483292_4745422044835137671_n.jpg?stp=dst-jpg_p160x160&_nc_cat=102&ccb=1-7&_nc_sid=aee45a&_nc_ohc=lm7T10JT5vMAX_lFd4f&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdRZXt-3ZVUpoyTnp77j4DEzMfkHfUTp8AgD5Nw3gjVDqg&oe=64ED319E",
             // "panorama": "./img/anhpanorama7.jpg",
             "autoLoad": true
         });
-        pannellum.viewer('panorama1', {
+        pannellum.viewer('panorama2', {
             "type": "equirectangular",
             "panorama": "https://scontent.xx.fbcdn.net/v/t1.15752-9/358216011_185621684359638_2911792766507052994_n.jpg?stp=dst-jpg_s417x417&_nc_cat=100&ccb=1-7&_nc_sid=aee45a&_nc_ohc=YBeXgQC74jMAX_Fkk2Z&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdSw7QgaLeJa0M7z0RkiEcKWk-bDgHD2zkpPrQx8um0maw&oe=64ED5D7E",
             // "panorama": "./img/anhpanorama7.jpg",
