--- a/index_GT.html
+++ b/index_GT.html
@@ -55,7 +55,7 @@
                         <img id="icon_mn" src="img/icon/info.png">
                         Giới Thiệu
                     </a>
-                    <a href id="mn">
+                    <a href="index_HD.html" id="mn">
                         <img id="icon_mn" src="img/icon/news.png">
                         Hoạt Động
                     </a>
@@ -63,7 +63,7 @@
                         <img id="icon_mn" src="img/icon/map.png">
                         Địa Chỉ Đỏ
                     </a>
-                    <a href id="mn">
+                    <a href="index_lh.html" id="mn">
                         <img id="icon_mn" src="img/icon/contact.png">
                         Liên hệ
                     </a>
@@ -161,8 +161,8 @@
                         nhiều”, Thứ trưởng Nguyễn Huy Dũng nói.</p>
                     <!-- <br> -->
                     <p id="p_intro">Cùng
-                        với tiến trình chuyển đổi số quốc gia. Ban Chấp
-                        Hành Đoàn TNCS Hồ Chí Minh thôn Vân Quật giới thiệu
+                        với tiến trình chuyển đổi số quốc gia. Ban chấp hành
+                        Đoàn TNCS Hồ Chí Minh thôn Vân Quật giới thiệu
                         việc triển khai xây dựng hệ thống
                         "Ứng dụng chuyển đổi số - số hóa thông tin" tại địa
                         chỉ <a href="https://tuoitrevanquat.github.io">https://tuoitrevanquat.github.io</a></p>
@@ -186,10 +186,10 @@
         </div>
         <div class="container-fluid mt-2" id="tab3">
             <div class="row">
-                <div class="col-xs-12" style="background-color:red;">
-                    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-
-                </div>
+                <div class="col-xs-12"
+                style="height: 10px; background-color:#242044"> </div>
+                <div class="col-xs-12"
+                style="height: 10px; background-color:#810505"> </div>
             </div>
         </div>
 
