--- a/index_lh.html
+++ b/index_lh.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
     <head>
-        <title>Vân Quật - Địa chỉ đỏ</title>
+        <title>Vân Quật - Giới Thiệu</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/css.css">
@@ -26,6 +26,7 @@
 
     </head>
     <body>
+
         <div class="container-fluid" style="display: flex; width: 100%;">
             <img id="logoD" src="img/banner.png">
         </div>
@@ -46,7 +47,7 @@
             <div id="menu_center">
                 <div class="topnav" id="myTopnav">
 
-                    <a id="mn" onclick="funcplay()">
+                    <a href="index.html" id="mn">
                         <img id="icon_mn" src="img/icon/home.png">
                         Trang Chủ
                     </a>
@@ -62,7 +63,7 @@
                         <img id="icon_mn" src="img/icon/map.png">
                         Địa Chỉ Đỏ
                     </a>
-                    <a href="index_lh.html" id="mn">
+                    <a href id="mn">
                         <img id="icon_mn" src="img/icon/contact.png">
                         Liên hệ
                     </a>
@@ -74,105 +75,43 @@
                 </div>
             </div>
         </div>
-        <!-- //--------end-menu------------------- -->
-        <!-- ---------------carousel---------------- -->
-        <div class="container-fluid mt-2">
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target data-slide-to="0" class="active"></li>
-                    <li data-target data-slide-to="1"></li>
-                    <li data-target data-slide-to="2"></li>
-                </ol>
 
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner" id="carousel_img">
-                    <div class="item active">
-                        <img src="img/dtvq6.jpg" alt="Los Angeles"
-                            style="width:100%;">
-                    </div>
-                    <div class="item">
-                        <img src="img/dtvq5.jpg" alt="Chicago"
-                            style="width:100%;">
-                    </div>
-                    <div class="item">
-                        <img src="img/dtvq4.jpg" alt="New york"
-                            style="width:100%;">
-                    </div>
+        <div class="container mt-2 bg-light">
+            <ul style="padding: 0px;">
+                <li><img src="img/icon/home.png" id="ic_ft2">
+                    Đoàn TNCH Hồ Chí Minh Thôn Vân Quật
+                </li>
+                <li> <img src="img/icon/map.png" id="ic_ft2">
+                    Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh
+                    Quảng Nam
+                </li>
+                <li> <img src="img/icon/contact.png" id="ic_ft2">
+                    doanthonvanquat@gmail.com
+                </li>
+            </ul>
+            <form>
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Họ và tên:</label>
+                    <input type="email" class="form-control"
+                        id="exampleFormControlInput1"
+                        placeholder="ví dụ: Trần Viết An">
                 </div>
-                <a class="left carousel-control" href="#myCarousel"
-                    data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#myCarousel"
-                    data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
-        <!-- --------news----------- -->
-        <div class="container-fluid" id="sty_ne">
-            <p id="p_ne">Bản đồ số hóa địa phận xã Duy Thành</p>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30708.50040185922!2d108.30045798689882!3d15.827003817230661!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314209528168a5c5%3A0xc36d3fcadc35d45b!2zRHV5IFRow6BuaCwgRHV5IFh1ecOqbiBEaXN0cmljdCwgUXXhuqNuZyBOYW0sIFZpZXRuYW0!5e0!3m2!1sen!2s!4v1690981116705!5m2!1sen!2s"
-                width="100%" style="border:0;" allowfullscreen
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-        </div>
-        <!-- --------endnews----------- -->
-
-        <!-- --------mapred----------- -->
-        <div class="container-fluid" id="sty_mapred">
-            <p id="p_ne">Số hóa bản đồ địa chỉ đỏ</p>
-            <div class="row">
-                <div class="col-xs-2" id="dis1">
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Email:</label>
+                    <input type="email" class="form-control"
+                        id="exampleFormControlInput1"
+                        placeholder="name@example.com">
                 </div>
-                <div class="col-xs-8" id="dis2">
-                    <!-- ----car------ -->
-                    <div class="row">
-                        <div class="col-xs-4">
-                            <div class="card" id="card_mapred">
-                                <img class="card-img-top" src="img/dcd_vq2.jpg"
-                                    id="img_card">
-                                <div class="card-body">
-                                    <h6><a href="index_dcd_CTVQ.html">Di tích
-                                            chiến thắng Vân Quật</a></h6>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-4">
-                            <div class="card" id="card_mapred">
-                                <img class="card-img-top" src="img/dcd_nt0.jpg"
-                                    id="img_card">
-                                <div class="card-body">
-                                    <h6><a href="index_dcd_NTLS.html">Nghĩa
-                                            trang liệt sĩ xã Duy
-                                            Thành</a></h6>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-4">
-                            <div class="card" id="card_mapred">
-                                <img class="card-img-top" src="img/dcd_xb.jpg"
-                                    id="img_card">
-                                <div class="card-body">
-                                    <h6><a href="index_dcd_XB.html">Di tích vụ
-                                            thảm sát xóm Bàu</a></h6>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
-                    <!-- -----end ----car------ -->
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Nội dung đóng góp:</label>
+                    <textarea class="form-control"
+                        id="exampleFormControlTextarea1"
+                        rows="3"></textarea>
                 </div>
-                <div class="col-xs-2" id="dis1"> </div>
-            </div>
+                <button type="button" class="btn-xs btn-primary" id="send" onclick="alert('Cảm ơn bạn đã đóng góp nội dung với chúng tôi! ')"><a style="color: aliceblue;">Gửi</a></button>
+            </form>
         </div>
-        <!-- ----end--------mapred----------- -->
-
         <!-- ---------footer-------- -->
         <div class="container-fluid bg-light " id="ft_bg">
             <div class="row">
@@ -193,8 +132,8 @@
                         </li>
                     </ul>
                     <!-- <a style="color: #0099FF; float: left;">Đoàn TNCH Hồ Chí Minh Thôn Vân Quật</a>
-            <a style="color: #0099FF; float: left;">Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh QUảng Nam</a><br>
-            <a style="color: #0099FF; float: left;">doanthonvanquat@gmail.com</a> -->
+              <a style="color: #0099FF; float: left;">Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh QUảng Nam</a><br>
+              <a style="color: #0099FF; float: left;">doanthonvanquat@gmail.com</a> -->
 
                 </div>
                 <div class="col-xs-6 ">
@@ -219,16 +158,9 @@
             </h6>
             <h6>Trang web đang được triển khai trên nên tảng Github cá nhân</h6>
         </footer>
-        <audio id="audio_p">
-            <source src="./audio/GiaiDieuTuHao.mp3">
-        </audio>
         <!-- ---------end footer-------- -->
     </body>
     <script>
-        var audio = document.getElementById("audio_p");
-        function funcplay() {
-          audio.play();
-        }
         function myFunction() {
             var x = document.getElementById("myTopnav");
             if (x.className === "topnav") {
